--- a/frontend/2025-07-18.md
+++ b/frontend/2025-07-18.md
@@ -54,12 +54,13 @@
     }
   });
 </script>
-
+```html
+<h2>hi</h2>
 
 📝 Updated package.json scripts
-json
-Copy
-Edit
+
+ ```html
+
 "scripts": {
   "start": "set PORT=8081 && react-scripts start && node server/index.js",
   "build": "react-scripts build",
