--- a/frontend/2025-07-18.md
+++ b/frontend/2025-07-18.md
@@ -54,16 +54,18 @@
     }
   });
 </script>
+
+ ### 📝 Script added in `package.json`
+
 ```html
-<h2>hi</h2>
-
-📝 Updated package.json scripts
-
- ```html
-
-"scripts": {
-  "start": "set PORT=8081 && react-scripts start && node server/index.js",
-  "build": "react-scripts build",
-  "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!my-library-dir)/'",
-  "eject": "react-scripts eject"
+{
+  "scripts": {
+    "start": "set PORT=8081 && react-scripts start && node server/index.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!my-library-dir)/'",
+    "eject": "react-scripts eject"
+  }
 }
+
+
+ 
